[package]
name = "wunderkammer"
version = "0.2.0"
edition = "2021"
description = "Simple Entity-Component storage for tiny games."
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/wunderkammer"
readme = "README.md"
publish = true
keywords = ["gamedev", "ecs", "compositioni"]
categories = ["game-development", "data-structures"]

[features]
serialize = ["dep:serde"]
string = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
wunderkammer_derive = { version = "0.1", path = "wunderkammer_derive" }

[dev-dependencies]
serde_json = "1.0"
macroquad = "0.4"
